app/src/App.css
/* ... */
.inline-form-control{
    position: relative;
    flex: 1 1 auto;
    width: 1%;
    margin-bottom: 0;
}
.pt-6 {
    padding-top: 4rem !important;
}

.pt-7 {
  padding-top: 5rem !important;
}

.flex-1 {
  flex: 1;
}

.form-control:focus, .input-wrap:focus-within, .StripeElement--focus{
  border: 1px solid #5D9DF5 !important;
  box-shadow: rgba(50, 50, 93, 0.03) 0px 2px 3px, rgba(0, 0, 0, 0.03) 0px 1px 3px !important;
  color: #132042;
}
.StripeElement--invalid {
  border-color: #fa755a;
}
#navbar-top-left{
    position: fixed;
    top: 0;
    left: 80px;
    height: 65px;
    z-index: 1050;
    display: flex;
    align-items: center;
}
#trash{
    background-image: url('/trash.svg') !important;
    background-repeat: no-repeat !important;
    background-position: 50% 50% !important;
    background-size: 11px !important;
}
.subheader-page-container{
    height: 100%;
    width: 100%;
}
.subheader-page-container>div{
    overflow-y: scroll;
    height: 100%;
    width: 100%;
    padding-bottom: 120px;
}
#app>#canvas {
    position: absolute;
    top: 115px;
    right: 0;
    left: 0;
    bottom: 0;
    overflow-x: hidden;
}

.main-container-header {
    flex: 0 0 auto;
    min-width: 0;
    min-height: 0;
    position: relative;
    z-index: 20;
}

#app {
    position: fixed;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    display: -ms-flexbox;
    display: flex;
    -ms-flex-direction: column;
    flex-direction: column;
    height: 100%;
    min-width: 0;
    min-height: 0;
    z-index: 1;
}
#app.secondary-padding, #app.secondary-padding>#canvas {
    top: 111px;
}
#app.canvas{
    position: fixed;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    display: -ms-flexbox;
    display: flex;
    -ms-flex-direction: column;
    flex-direction: column;
    height: 100%;
    min-width: 0;
    min-height: 0;
    z-index: 1;
}
.grid-col-3, .grid-col-2 {
    justify-content: center;
    align-content: center;
    display: grid;
}
.grid-col-3{
    grid-template-columns: minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr);
}
.grid-col-2{
    grid-template-columns: 1fr 1fr;
}
.grid-col-2-skew{
    grid-template-columns: 1fr 2fr !important;
}
.grid-col-3>*, .grid-col-2>*{
    width: 100%;
}
.mx--1{
    margin-left: -0.25rem;
    margin-right: -0.25rem;
}
.mx--2{
  margin-left: -0.5rem;
  margin-right: -0.5rem;
}
.mx--4{
    margin-left: -1.5rem!important;
    margin-right: -1.5rem !important;
}
.helper-text{
    color:  #8da2b5;
    font-size: 13px;
}
.white-pill {
    cursor: pointer;
    background-color: #fff;
    border: none;
    border-radius: 30px;
    padding: 2px 15px 2px 14px;
    color: #42A5FF;
    box-shadow: 0 4px 6px rgba(50,50,93,.11), 0 1px 3px rgba(0,0,0,.08);
    transition: transform 0.3s ease !important;
}
.white-pill:hover{
    box-shadow: 0 7px 14px rgba(50,50,93,.1), 0 3px 6px rgba(0,0,0,.08);
    -webkit-transform: translateY(-1px);
    transform: translateY(-1px);
}
.rounded-iframe {
    border-radius: 5px;
    overflow: hidden;
}
.clickable {
    cursor: pointer;
}
.clickable:hover {
    text-decoration: underline;
}
.top-right{
    position: absolute;
    right: 0;
    top: 0;
}
.search-input {
    background-image: url(/search.svg) !important;
    background-size: auto 40% !important;
    background-repeat: no-repeat !important;
    background-position: 15px center !important;
    padding-left: 43px !important;
    color: #132144 !important;
}
.search-input:focus{
    border: 1px solid #fff !important;
    box-shadow: none !important;
}
.user-input {
    background-image: url('/user.svg') !important;
    background-size: auto 17px !important;
    background-repeat: no-repeat !important;
    background-position: 12px 11px !important;
    padding-left: 40px !important;
}
.dollar-input{
    background-image: url('/dollar.svg') !important;
    background-size: auto 40% !important;
    background-repeat: no-repeat !important;
    background-position: 15px center !important;
    padding-left: 35px !important;
    border-radius: 6px;
}
.rotate{
    transition: transform .15s ease-in-out;
}
.z-hard{
    z-index: 10;
}
.modal {
  overflow-y: scroll !important;
  overflow-x: hidden !important;
  -ms-overflow-style: none;
  scrollbar-width: none;
}
.modal::-webkit-scrollbar { 
  display: none;
}
.joyride-overlay{
    z-index: 1060!important
}
.__floater.__floater__open{
    z-index: 1061!important
}
button:focus{
    outline: none;
}
.blink {
    animation: blinker 0.5s linear infinite;
}

@keyframes blinker {
    50% {
        opacity: 0;
    }
}
.text-blue {
    color: #42A5FF;
}
.text-secondary{
    color: #8da2b5 !important;
}
.text-lg{
  font-size: 3rem;
}
.text-sm{
  font-size: 12px;
}
audio {
    width: 275px;
}
@media (min-width: 576px){
    .modal-xl {
        max-width: 540px;
    }
}
@media (min-width: 768px){
    .modal-xl {
        max-width: 720px;
    }
}
@media (min-width: 992px){
    .modal-xl {
        max-width: 960px;
    }
}
@media (min-width: 1200px){
    .modal-xl {
        max-width: 1140px;
    }
}
.small {
    font-size: 12px;
}

.btn-thicc{
    padding: 9px 20px;
    height: 45px;
}

.text-cash-money{
    color: #23e4a6;
}

.btn-sm {
    font-size: 10px;
}

.btn-icon {
    width: 42px;
    height: 42px;
    color: rgba(110, 132, 154, .8);
    background-color: #fff;
    padding: 12px 11px;
    text-align: center;
    box-shadow: 0 0 0 1px rgba(17, 49, 96, .04), 0 2px 4px 0 rgba(17, 49, 96, .16);
    position: relative;
    z-index: 1;
}

.btn-icon:before {
    content: "";
    position: absolute;
    z-index: -1;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    border-radius: 50%;
    background-image: linear-gradient(-180deg, rgba(78, 111, 249, .12) 3%, rgba(78, 111, 249, .16) 98%);
    box-shadow: inset 0 0 0 1px #fff;
    opacity: 0;
    transition: opacity .12s linear;
}

.btn-icon.__icon-sm {
    padding-top: 13px;
    padding-bottom: 13px;
}
/* ... */

